# logstats

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/logstats/: __init__.py  cli.py  parser.py  render.py  stats.py
tests/: test_cli.py  test_filter.py  test_parser.py  test_stats.py
